# ConfigDiffGuard

./: .codeup.env.example  .gitignore  README.md  index.html  provider_accounts.example.json  pyproject.toml  rules.json  studio_config_sources.example.json  局域网 OFF.command  局域网 ON.command  局域网分享配置对比工具.command  局域网开启.command  打开配置对比工具.command  本地开启.command  查看局域网分享状态.command  配置远程平台账号.command
config_diff_guard/: __init__.py  cli.py  engine.py  models.py  parsers.py  report.py  rules.py  server.py  source_config.py  sources.py
examples/: rules.demo.json
examples/new/: items.csv
examples/old/: items.csv
tests/: test_demo.py
